<resources>
    <string name="app_name">Reaction Timer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="WelcomeTitle">Welcome to Reaction Timer!</string>
    <string name="SingleUser">Single-User Mode</string>
    <string name="Buzzer">Gameshow buzzer Mode</string>
    <string name="Stat">Statistics</string>
    <string name="clickButton">Buzz!</string>
    <string name="user_num">How many users do you have?</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="clear">Clear Data</string>
</resources>
